@@ -32,11 +32,10 @@ namespace WindowsFormsProject
         {
             _zoomctrl = new ZoomControl();
             ZoomControl.SetViewFinderVisibility(_zoomctrl, Visibility.Visible);
-            /* ENABLES WINFORMS HOSTING MODE --- >*/
             var logic = new GXLogicCore<DataVertex, DataEdge, BidirectionalGraph<DataVertex, DataEdge>>();
             _gArea = new GraphAreaExample
             {
-                EnableWinFormsHostingMode = true,
+               // EnableWinFormsHostingMode = false,
                 LogicCore = logic,
                 EdgeLabelFactory = new DefaultEdgelabelFactory()
             };
